--- a/helpMe.html
+++ b/helpMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Workshop &mdash; Colorlib Website Template</title>
+    <title>COVID Central</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/covid19.png" type="image/x-icon">
@@ -90,8 +90,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-11 col-xl-2">
-                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">Work<span
-                                    class="text-primary">shop</span> </a></h1>
+                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">COVID<span
+                                    class="text-primary">Central</span> </a></h1>
                     </div>
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
