just some frontend changes for the footer

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <div class="row mb-5">
           <div class="col-md-4">
             <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-            <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon</p>
+            <p>This Hack/Project Was Made For The 2020 HackQuarantine Hackathon <a href="https://github.com/aditya1rawat" target="_blank" class="p-2"><span class="icon-github"></span></a></p>
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
@@ -174,17 +174,17 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Connect With Us</h2>
-            <p>
-              Aditya Rawat -
-              <a href="https://github.com/aditya1rawat" class="p-2"><span class="icon-github"></span></a>
-              <a href="https://adityarawat.me/" class="p-2"><span class="icon-globe"></span></a>
-            </p>
-            <p>
-              JP-Vela -
-              <a href="https://github.com/JP-Vela" class="p-2"><span class="icon-github"></span></a>
-              <a href="https://jp-vela.github.io/index.html" class="p-2"><span class="icon-globe"></span></a>
-            </p>
+              <h2 class="footer-heading text-uppercase mb-4">Connect With Us</h2>
+              <p>
+                Aditya -
+                <a href="https://github.com/aditya1rawat" target="_blank" class="p-2"><span class="icon-github"></span></a>
+                <a href="https://adityarawat.me/" target="_blank" class="p-2"><span class="icon-globe"></span></a>
+              </p>
+              <p>
+                JohnPaul -
+                <a href="https://github.com/JP-Vela" target="_blank" class="p-2"><span class="icon-github"></span></a>
+                <a href="https://jp-vela.github.io/index.html" target="_blank" class="p-2"><span class="icon-globe"></span></a>
+              </p>
           </div>
         </div>
         <div class="row">
@@ -196,10 +196,12 @@
               Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
+              <p>Developed With <i class="icon-heart text-primary" aria-hidden="true"></i> <span>By <a>Aditya & JohnPaul</a></span></p>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </footer>
     
   </div>
