--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Workshop &mdash; Colorlib Website Template</title>
+    <title>COVID Central</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/covid19.png" type="image/x-icon">
@@ -64,18 +64,13 @@
             <span class="d-block mb-3 caption" data-aos="fade-up">Get To Know</span>
             <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">About Us</h1>
           </div>
-          
         </div>
       </div>
     </div>
-
     <div class="site-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-4 ">
-            <div class="site-section-heading" data-aos="fade-up" data-aos-delay="100">
-              <!--<h2>Welcome To Workshop</h2>-->
-            </div>
           </div>
           <div class="col-lg-5 mt-5 pl-lg-1" data-aos="fade-up" data-aos-delay="200">
             <h4>Who we are</h4>
