--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
 
         <div class="row mb-5">
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry"  data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="d-block mb-4">
+            <a href="amISafe.html" class="d-block mb-4">
               <img src="images/am.png" alt="Image" class="img-fluid appImg"> 
             </a>
-            <h2 class="mb-4"><a href="#">Am I Safe?</a></h2>
+            <h2 class="mb-4"><a href="amISafe.html">Am I Safe?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/coolpic.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>JohnPaul</a></span></div> 
@@ -293,10 +293,10 @@
           </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
-            <a href="#" class="d-block mb-4">
+            <a href="helpMe.html" class="d-block mb-4">
               <img src="images/helpme.png" alt="Image" class="img-fluid appImg"> 
             </a>
-            <h2 class="mb-4"><a href="#">Help Me!</a></h2>
+            <h2 class="mb-4"><a href="helpMe.html">Help Me!</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/aditya.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>Aditya</a></span></div> 
@@ -305,10 +305,10 @@
           </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
-            <a href="#" class="d-block mb-4">
+            <a href="whatsGoingOn.html" class="d-block mb-4">
               <img src="images/what.png" alt="Image" class="img-fluid appImg"> 
             </a>
-            <h2 class="mb-4"><a href="#">What Is Going On?</a></h2>
+            <h2 class="mb-4"><a href="whatsGoingOn.html">What Is Going On?</a></h2>
             <div class="mb-4 post-meta d-flex align-items-center">
               <div class="mr-2"><img src="images/cool.jpg" alt="Image" class="img-fluid"></div>
               <div><span>By <a>Aditya & JohnPaul</a></span></div> 
