--- a/whatsGoingOn.html
+++ b/whatsGoingOn.html
@@ -226,16 +226,17 @@
     <div class="container-fluid">
 
       <hr />
-
       <div class="row" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="col-md-4">
-          <h5 class="text-center newLine cool" style="font-size: 17px; ">Read a quick summary of the news updates on the
-            coronavirus. Click the source to read the full article</article>
+        <div class="col-md-12">
+          <h3 class="text-center newLine cool" style="font-size: 25px; ">Read a quick summary of the news updates on the
+            coronavirus.</article>
+            <hr>
+            <p style="font-size: 15px;">Click the source to read the full article</p>
           </h5>
         </div>
-
-        <div class="col-md-8">
+      </div>
+      <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-md-12">
           <table class="table">
             <thead>
               <tr>
