fixed naming issue

--- a/amISafe.html
+++ b/amISafe.html
@@ -60,7 +60,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li  class="active"><a href="amisafe.html">Am I Safe?</a></li>
+                <li  class="active"><a href="amISafe.html">Am I Safe?</a></li>
                 <li><a href="helpMe.html">Help Me!</a></li>
                 <li><a href="whatsGoingOn.html">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
@@ -182,7 +182,7 @@
             <ul class="list-unstyled">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="amisafe.html">Am I Safe?</a></li>
+              <li><a href="amISafe.html">Am I Safe?</a></li>
               <li><a href="helpMe.html">Help Me!</a></li>
               <li><a href="whatsGoingOn.html">What's Going On?</a></li>
               <!--<li><a href="news.html">News</a></li>-->
