--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           <ul class="list-unstyled">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="amisafe.html">Am I Safe?</a></li>
+            <li><a href="amISafe.html">Am I Safe?</a></li>
             <li><a href="helpMe.html">Help Me!</a></li>
             <li><a href="whatsGoingOn.html">What's Going On?</a></li>
             <!--<li><a href="news.html">News</a></li>-->
