--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="amisafe.html">Am I Safe?</a></li>
+                <li><a href="amISafe.html">Am I Safe?</a></li>
                 <li><a href="helpMe.html">Help Me!</a></li>
                 <li><a href="whatsGoingOn.html">What's Going On?</a></li>
                 <!--<li><a href="news.html">News</a></li>-->
@@ -131,7 +131,7 @@
           <ul class="list-unstyled">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="amisafe.html">Am I Safe?</a></li>
+            <li><a href="amISafe.html">Am I Safe?</a></li>
             <li><a href="helpMe.html">Help Me!</a></li>
             <li><a href="whatsGoingOn.html">What's Going On?</a></li>
             <!--<li><a href="news.html">News</a></li>-->
