--- a/index.html
+++ b/index.html
@@ -336,7 +336,11 @@
           </div>
 
           <div class="col-md-6 col-lg-12 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <a href="https://newsapi.org/" target="_blank"><img src="images/newsapi.png" alt="Image" class="img-fluid" style="display:block;margin-left:auto; margin-right:auto"></a>
+            <a href="https://leafletjs.com/" target="_blank"><img src="images/newsapi.png" alt="Image" class="img-fluid" style="display:block;margin-left:auto; margin-right:auto"></a>
+          </div>
+
+          <div class="col-md-6 col-lg-12 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+            <a href="https://newsapi.org/" target="_blank"><img src="images/leaflet.png.png" alt="Image" class="img-fluid" style="display:block;margin-left:auto; margin-right:auto"></a>
           </div>
 
           <div class="col-md-6 col-lg-12 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
