Added some text for trouble  shooting on amISafe.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.min.js"></script>
-
+    <script>console.log();</script>
     <style>
       .appImg {
         border:1px solid #ff5733;
