Added more trouble shooting tips on amISafe.

--- a/amISafe.html
+++ b/amISafe.html
@@ -108,7 +108,7 @@
           <div class="col-md-8">
             <h5 class="cool" style="padding-bottom: 0px;">People Congestion Map:</h5>
 
-            <p style="font-size: 14px;">(Not getting your location?, you may need to change your privacy settings. <br/>If not, please visit <a href="https://covidcentral.tech/amISafe.html">this</a> link)</p>
+            <p style="font-size: 14px;">(Not getting your location?, it may take a couple of seconds, you may need to change your privacy settings. <br/>If not, please visit <a href="https://covidcentral.tech/amISafe.html">this</a> link)</p>
             <div id="mapid" style="padding-top: 0px;"></div>  
 
           </div>
