--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
       var location = window.location.href.split(':');
     if(location[0]=="http"){
-      window.location.replace("https"+location[1]);  
+      window.location.href=("https"+location[1]);  
     }
     </script>
     <style>
