--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script>
       var location = window.location.href.split(':');
+      console.log(location);
     if(location[0]=="http"){
       window.location.href=("https"+location[1]);  
     }
