--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       var location = window.location.href.split(':');
       console.log(location);
     if(location[0]=="http"){
-      window.location.href=("https"+location[1]);  
+      //window.location.href=("https://covidcentral.tech");  
     }
     </script>
     <style>
